force-app/main/default/objects/Enrollment_Component_Picklist_Option__c.object
<CustomObject>
    <label>Enrollment Component Picklist Option</label>
    <nameField>
        <displayFormat>PO-{0}</displayFormat>
        <label>Enrollment Component Picklist Option Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Component Picklist Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>