force-app/main/default/objects/Enrollment_Component_Picklist_Option__c/fields/Enrollment_Component__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Component__c</fullName>
    <inlineHelpText>Parent Question Record Type, Picklist Type Enrollment Component.</inlineHelpText>
    <label>Enrollment Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Enrollment_Component__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Question</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Enrollment_Component__c</referenceTo>
    <relationshipLabel>Enrollment Component Picklist Options</relationshipLabel>
    <relationshipName>Enrollment_Component_Picklist_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>