force-app/main/default/objects/Enrollment_Component_Picklist_Option__c/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <description>The display name for the option that should appear for the user in the picklist.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Option Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>