force-app/main/default/objects/Enrollment_Component_Picklist_Option__c/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <description>The value that will be saved to the target field when this option is selected by the person completing the question.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>