force-app/main/default/objects/Enrollment_Component_Picklist_Option__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order the option should display for the user in. Unordered options should display alphabetically. If there is a mix of ordered and unordered options, display the ordered options first, followed by the unordered sorted alphabetically.</description>
    <inlineHelpText>Relative to the parent Enrollment Component</inlineHelpText>
    <label>Order</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>