force-app/main/default/objects/Enrollment_Component_Picklist_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Enrollment_Component__c</columns>
    <columns>Option_Label__c</columns>
    <columns>Option_Value__c</columns>
    <columns>Order__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Component__c</field>
        <operation>contains</operation>
        <value>Grade Requested</value>
    </filters>
    <filters>
        <field>External_Id__c</field>
        <operation>contains</operation>
        <value>WYCA</value>
    </filters>
    <label>All</label>
</ListView>